--- a/index.html
+++ b/index.html
@@ -1,29 +1,87 @@
 <!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
-  <title>饮食评分计算器</title>
-  <style>
-    /* 基础样式（可参考网页7的表格美化技巧） */
-    .container { max-width: 600px; margin: 20px auto; }
-    table { width: 100%; border-collapse: collapse; }
-    th, td { padding: 8px; border: 1px solid #ddd; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>饮食评分计算器</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f8f9fa;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .food-item {
+            margin-bottom: 10px;
+        }
+        .result-card {
+            margin-top: 20px;
+            padding: 20px;
+            border-radius: 10px;
+        }
+        .unhealthy-score {
+            background-color: #fff3f3;
+        }
+        .healthy-score {
+            background-color: #f3fff3;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h2>今日饮食记录</h2>
-    <form id="foodForm">
-      <input type="text" id="foodName" placeholder="食物名称" required>
-      <input type="number" id="quantity" placeholder="数量（克）" required>
-      <button type="submit">添加</button>
-    </form>
-    <table id="resultTable">
-      <thead><tr><th>食物</th><th>数量</th><th>得分</th></tr></thead>
-      <tbody></tbody>
-      <tfoot><tr><td colspan="2">总分</td><td id="totalScore">0</td></tr></tfoot>
-    </table>
-  </div>
-  <script src="app.js"></script>
+    <div class="container">
+        <h1 class="text-center mb-4">饮食评分计算器</h1>
+        
+        <div class="mb-4">
+            <label class="form-label">性别</label>
+            <select id="gender" class="form-select">
+                <option value="male">男</option>
+                <option value="female">女</option>
+            </select>
+        </div>
+
+        <div id="foodList">
+            <div class="food-item row g-3">
+                <div class="col-md-6">
+                    <input type="text" class="form-control food-name" placeholder="食物名称">
+                </div>
+                <div class="col-md-4">
+                    <input type="number" class="form-control food-weight" placeholder="重量(克)">
+                </div>
+                <div class="col-md-2">
+                    <button class="btn btn-danger remove-food">删除</button>
+                </div>
+            </div>
+        </div>
+
+        <button id="addFood" class="btn btn-primary mt-3">添加食物</button>
+        <button id="calculate" class="btn btn-success mt-3">计算得分</button>
+
+        <div id="results" class="mt-4">
+            <div class="result-card unhealthy-score">
+                <h3>不健康高脂饮食评分</h3>
+                <p>得分: <span id="unhealthyScore">0</span>/30</p>
+                <p>总死亡率风险: <span id="totalMortality">-</span></p>
+                <p>心血管疾病死亡率风险: <span id="cvdMortality">-</span></p>
+            </div>
+            
+            <div class="result-card healthy-score mt-3">
+                <h3>健康高脂饮食评分</h3>
+                <p>得分: <span id="healthyScore">0</span>/30</p>
+                <p>总死亡率风险: <span id="totalMortality2">-</span></p>
+                <p>心血管疾病死亡率风险: <span id="cvdMortality2">-</span></p>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="foodData.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
